Try fix blur effect on safari browser

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,8 +25,9 @@ body {
     left: 0;
     width: 100vw;
     height: 100vh;
-    backdrop-filter: blur(5px);
-    transform: translate3d(0, 0, 0);
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px); 
+    /* transform: translate3d(0, 0, 0); */
 }
 
 .btn {
